--- a/style.css
+++ b/style.css
@@ -62,6 +62,16 @@ footer{
 }
 
 @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
+    body{
+        display: block;
+        margin: 2px;
+        background-image: url(/assets/evil-minion-minions-gif-clip-art-despicable-me-minions-holiday.jpg);
+        opacity: 0.95;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-position: 60% 75%;
+        background-size: inherit;
+    }
     h1{
         font-style: italic;
         text-align: center;
