feat : added text translator API

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body{
     display: block;
     margin: 2px;
-    background-image: url(/assets/evil-minion-minions-gif-clip-art-despicable-me-minions-holiday.jpg);
+    background-image: url(/assest/evil-minion-minions-gif-despicable-me-minions-holiday-png-clip-art.png);
     opacity: 0.95;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -65,7 +65,7 @@ footer{
     body{
         display: block;
         margin: 2px;
-        background-image: url(/assets/evil-minion-minions-gif-clip-art-despicable-me-minions-holiday.jpg);
+        background-image: url(/assest/evil-minion-minions-gif-despicable-me-minions-holiday-png-clip-art.png);
         opacity: 0.95;
         background-repeat: no-repeat;
         background-attachment: fixed;
