--- a/style.css
+++ b/style.css
@@ -60,6 +60,36 @@ footer{
     text-align: center;
     font-size: xx-large;
 }
+/* #spinner{
+    visibility: hidden;
+    width: 80px;
+    height: 80px;
+  
+    border: 2px solid #f3f3f3;
+    border-top:3px solid #f25a41;
+    border-radius: 100%;
+  
+    position: absolute;
+    top:0;
+    bottom:0;
+    left:0;
+    right: 0;
+    margin: auto;
+  
+    animation: spin 1s infinite linear;
+  }
+  
+  @keyframes spin {
+    from {
+        transform: rotate(0deg);
+    } to {
+        transform: rotate(360deg);
+    }
+  }
+  
+  #spinner.show {
+    visibility: visible;
+  } */
 
 @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
     body{
@@ -69,7 +99,7 @@ footer{
         opacity: 0.95;
         background-repeat: no-repeat;
         background-attachment: fixed;
-        background-position: 50% 50%;
+        background-position: 50% 90%;
         background-size: inherit;
     }
     h1{
