--- a/style.css
+++ b/style.css
@@ -99,8 +99,8 @@ footer{
         opacity: 0.95;
         background-repeat: no-repeat;
         background-attachment: fixed;
-        background-position: 50% 90%;
-        background-size: contain;
+        background-position: 50% 75%;
+        background-size: cover;
     }
     h1{
         font-style: italic;
